--- a/source/_static/custom.css
+++ b/source/_static/custom.css
@@ -4,6 +4,7 @@ html.dark body {
 html.dark header {
     background-color: #111314 !important;
 }
+aside img,
 header img {
     filter: none !important;
 }
